k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: molam-id
  labels:
    name: molam-id
    app: molam-id
